syntax = "proto3";

package valuestore;

service ValueStore {
  // Get the stored value
  rpc Get (GetRequest) returns (GetResponse) {}

  // Set the stored value to a new value
  rpc Set (SetRequest) returns (SetResponse) {}
}

message GetRequest {}

message GetResponse {
  uint64 value = 1;
}

message SetRequest {
  uint64 value = 1;
}

message SetResponse {}
